--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="break_eternity.js"></script>
-    <script src="main.js"></script>
     <title>Incremental Game</title>
 </head>
 <body>
-    <button onclick="click()">+1</button>
+    <button onclick="test()">+1</button>
+    <script src="break_eternity.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
