--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Incremental Game</title>
 </head>
 <body>
-    <button onclick="test()">+1</button>
+    <button onclick="onClick()">+1</button>
     <script src="break_eternity.js"></script>
     <script src="main.js"></script>
 </body>
