--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles.css">
     <title>Incremental Game</title>
 </head>
 <body>
-    <button onclick="onClick()">+1</button>
-    <script src="break_eternity.js"></script>
+    <div id="money" class="clicks">1</div>
+    <a class="clicker" id="clickButton" onclick="onClick()">+1</a>
     <script src="main.js"></script>
 </body>
 </html>
