--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 <body>
     <div id="money" class="clicks">1</div>
     <a class="clicker" id="clickButton" onclick="onClick()">+1</a>
+    <div class="upgradesButton" onclick="alert('hi')">Upgrades</div>
+    <li id="upgradesMenu">
+        <button class="upgradesButton">Buy Upgrade
+            <span class="upgradeToolTip">Hello</span>
+        </button>
+        <br>
+        <button id="upgradesButton">hi</button>
+        <br>
+        <button id="upgradesButton">hi</button>
+        <br>
+        <button id="upgradesButton">hi</button>
+        <br>
+        <button id="upgradesButton">hi</button>
+    </li>
     <script src="main.js"></script>
 </body>
 </html>
