--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div id="money" class="clicks">1</div>
     <a class="clicker" id="clickButton" onclick="onClick()">+1</a>
-    <div class="upgradesButton" onclick="alert('hi')">Upgrades</div>
-    <li id="upgradesMenu">
-        <button class="upgradesButton">Buy Upgrade
-            <span class="upgradeToolTip">Hello</span>
+    <div class="upgradesButton" onclick="toggleVisibility(upgradeMenu)">Upgrades</div>
+    <li id="upgradesMenu" style="visibility: hidden;">
+        <button class="upgradesButton" id="clickUpgrade" onclick="buyUpgrade('click')">+1/per click <br>
+            Cost: 10
         </button>
         <br>
         <button id="upgradesButton">hi</button>
