--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <br>
         <button id="upgradesButton">hi</button>
     </li>
+    <div id="presCoins">Prestige Coins: 0</div>
+    <a class="upgradesButton" id="presButton" onclick="prestige()">Prestige</a>
     <script src="main.js"></script>
 </body>
 </html>
