--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button id="upgradesButton">hi</button>
     </li>
     <div id="presCoins">Prestige Coins: 0</div>
+    <div id="presBonus">Prestige Bonus: 0%</div>
     <a class="upgradesButton" id="presButton" onclick="prestige()">Prestige</a>
     <script src="main.js"></script>
 </body>
