--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             Cost: 10
         </button>
         <br>
-        <button id="upgradesButton">hi</button>
+        <button class="upgradesButton" id="perSecUpgrade" onclick="buyUpgrade('perSec')">+1/sec <br>
+            Cost: 10
+        </button>
         <br>
         <button id="upgradesButton">hi</button>
         <br>
