--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             Cost: 25
         </button>
         <br>
-        <button id="upgradesButton">hi</button>
+        <button class="upgradesButton" id="offlineTimeUpgrade" onclick="buyUpgrade('offlineTime')">+0.5 hours offline time <br>
+            Cost: 1000
+        </button>
         <br>
         <button id="upgradesButton">hi</button>
         <br>
