--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <br>
         <button id="upgradesButton">hi</button>
     </li>
+    <li id="menu" style="visibility: hidden;">
+        <button class="menuButton" onclick="reset()">Reset</button>
+    </li>
     <div id="presCoins">Prestige Coins: 0</div>
     <div id="presBonus">Prestige Bonus: 0%</div>
     <a class="upgradesButton" id="presButton" onclick="prestige()">Prestige</a>
