--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://az622064.vo.msecnd.net/scripts/apeads.js?key=34af5992-78b3-4874-adf6-9e1468f8fe8a"></script>
     <title>Incremental Game</title>
 </head>
 <body>
@@ -45,6 +46,8 @@
     <div id="presCoins">Prestige Coins: 0</div>
     <div id="presBonus">Prestige Bonus: 0%</div>
     <a class="upgradesButton" id="presButton" onclick="prestige()">Prestige</a>
+    <div class="TrafficApeAds" data-type="300x250"></div>
+    <div class="TrafficApeAds" data-type="728x90"></div>
     <script src="main.js"></script>
 </body>
 </html>
