--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://az622064.vo.msecnd.net/scripts/apeads.js?key=34af5992-78b3-4874-adf6-9e1468f8fe8a"></script>
     <title>Incremental Game</title>
 </head>
 <body>
     <div id="money" class="clicks">1</div>
+    <div id="moneyPsDisplay" class="clicksPs">+0.00/s</div>
     <a class="clicker" id="clickButton" onclick="onClick()">+1</a>
     <div class="upgradesButton" onclick="toggleVisibility(upgradeMenu)">Upgrades</div>
     <div id="market">
@@ -17,13 +17,13 @@
         <div id="aprice">Apple Price: 10</div>
         <div id="aamount">Apples: 0</div>
         <button onclick="buyMarket('apple')">Buy 
-            <input type="number" id="applebuyamount" min="1" max="1000" style="position: relative; width: 40%">
+            <input type="number" id="applebuyamount" min="1" max="1000" value="1" style="position: relative; width: 40%">
         </button>
         <button onclick="sellMarket('apple')">Sell 
-                <input type="number" id="applesellamount" min="1" max="1000" style="position: relative; width: 40%">
+                <input type="number" id="applesellamount" min="1" max="1000" value="1" style="position: relative; width: 40%">
         </button>
     </div>
-    <li id="upgradesMenu" style="visibility: hidden;">
+    <li id="upgradesMenu" style="visibility: visible;">
         <button class="upgradesButton" id="clickUpgrade" onclick="buyUpgrade('click')">+1/per click <br>
             Cost: 10
         </button>
@@ -43,17 +43,8 @@
     <li id="menu" style="visibility: hidden;">
         <button class="menuButton" onclick="reset()">Reset</button>
     </li>
-    <div id="presCoins">Prestige Coins: 0</div>
     <div id="presBonus">Prestige Bonus: 0%</div>
     <a class="upgradesButton" id="presButton" onclick="prestige()">Prestige</a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="TrafficApeAds" data-type="300x250"></div>
-    <div class="TrafficApeAds" data-type="728x90"></div>
     <script src="main.js"></script>
 </body>
 </html>
